--- a/src/imageo/index.scss
+++ b/src/imageo/index.scss
@@ -11,8 +11,10 @@
 
 // Utilities
 @import "utils";
+@import "typography";
 
 // Components
 @import "components/card/card";
 @import "components/button/button";
 @import "components/navbar/navbar";
+@import "components/input/input";
