Added direct md file functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,5 @@
     ></app-wish-filter>
   </div>
   <app-wish-list [wishes]="items.filter(filter)"></app-wish-list>
-  <app-code-highlighter></app-code-highlighter>
+  <app-code-highlighter [markdownData]="markdownData" ></app-code-highlighter>
 </div>
