--- a/src/app/code-highlighter/code-highlighter.component.html
+++ b/src/app/code-highlighter/code-highlighter.component.html
@@ -12,7 +12,7 @@
         ngPreserveWhitespaces
         lineNumbers
         lineHighlight
-        [data]="markdown | language: 'python'"
+        [src]="'shared/mock/codes.md'"
         id="copyToClipboard"
         >
         </div>
