added no border for line numbers

--- a/src/shared/prismthemes/prism.theme.scss
+++ b/src/shared/prismthemes/prism.theme.scss
@@ -39,6 +39,10 @@
    background: #1e3040;
    font-size: 14px;
  }
+
+ .line-numbers .line-numbers-rows {
+  border: none !important;
+ }
  
  
  /* Inline code */
