created wish module

--- a/src/app/wish/add-wish/add-wish.component.html
+++ b/src/app/wish/add-wish/add-wish.component.html
@@ -4,6 +4,6 @@
       <input name="new-wish-text" class="p-1 col-xs-12 form-input" type="text" id="add-wish" placeholder="Enter your wish here..." [(ngModel)]="newWishText" autocomplete="off">
     </div>
     <div class="col-xs-2 d-flex justify-center align-center">
-      <button type="submit" class="btn btn-light-secondary btn-hover-light">Add Wish</button>
+      <button type="submit" class="btn btn-dark-secondary btn-hover-dark">Add Wish</button>
     </div>
   </form>
