--- a/src/app/breadcrumps/breadcrumps.component.html
+++ b/src/app/breadcrumps/breadcrumps.component.html
@@ -1,6 +1,6 @@
 <div class="breadcrumb_container">
     <div class="breadcrumb_group" *ngFor="let item of breadCrumbPaths; index as i">
-        <a class="breadcrumb_title" [href]="breadcrumbPath[i]">{{ item }}</a>
+        <a class="breadcrumb_title" [href]="breadcrumbPath[i]"><div [innerHTML]="item | highlight: 'hel'"></div></a>
         <span *ngIf="i !== breadCrumbPaths.length-1">
             <div class="breadcrumb_icon" *ngIf="icon !== '/'">
                 <img [src]="icon" alt="something">
