--- a/src/app/wish/wish-item/wish-item.component.html
+++ b/src/app/wish/wish-item/wish-item.component.html
@@ -1,10 +1,10 @@
 <li>
   <div class="form-check card">
-    <label class="form-check-label" [ngClass]="getClasses">
+    <label class="form-check-label d-flex gap-1" [ngClass]="getClasses">
       <input type="checkbox" name="checkbox" class="checkbox" id="checkbox-1" [checked]="wish.fulfilled"
         (click)="toggleItem()">
-      {{ wish.wishText }}
-    </label>
+        <div [innerHtml]="wish.wishText | highlight : 'learn'"></div>
+      </label>
     <div class="card-footer">
       <button type="button" class="btn btn-dark-danger btn-hover-light" (click)="removeItem()">Delete</button>
     </div>
