--- a/src/imageo/_mixins.scss
+++ b/src/imageo/_mixins.scss
@@ -17,3 +17,15 @@
   color: $color;
   background-color: $bg-color;
 }
+
+@mixin multiLineEllipsis2($font-size: 1em, $line-height: 1.2, $lines-to-show: 2) {
+  display: block; // Fallback for non-webkit
+  display: -webkit-box;
+  height: $font-size * $line-height * $lines-to-show; // Fallback for non-webkit
+  font-size: $font-size;
+  line-height: $line-height;
+  -webkit-line-clamp: $lines-to-show;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
