tweak in highlight directive

--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -14,7 +14,7 @@
         <input class="btn btn-light-secondary" type="submit" value="Submit">
     </form>
     <p appSearchHighlight
-    [searchedWords]="['Lorem']"
+    [searchedWords]="['lorem']"
     [text]="'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit animi quia similique dolore ex aspernatur, atque hic sed culpa quasi illo labore voluptatibus eveniet ratione ab quisquam id! Fuga velit possimus dicta libero dolore, natus magnam iste eius itaque, aliquam quasi expedita corporis ullam'"
     classToApply="highlight"
     class="multiline" ></p>
