--- a/src/imageo/_variable.scss
+++ b/src/imageo/_variable.scss
@@ -38,6 +38,7 @@ $themes: (
 //  Spacing
 $base-padding: 0.75rem !default;
 $base-margin: 0.75rem !default;
+$base-height: 0.75rem !default;
 
 // Borders
 $base-border-thickness: 1px !default;
