added transform animation

--- a/src/app/avatar/avatar.component.html
+++ b/src/app/avatar/avatar.component.html
@@ -4,5 +4,5 @@
             <img [src]="userIcon" class="h-2">
         </div>
     </button>
-    <app-avatar-drop *ngIf="showMenu" [@dropDownMenu]></app-avatar-drop>
+    <app-avatar-drop *ngIf="showMenu" [@dropDownMenu] class="drop-container"></app-avatar-drop>
 </div>
