--- a/src/app/avatar/avatar.component.scss
+++ b/src/app/avatar/avatar.component.scss
@@ -26,4 +26,10 @@
 
 .avatar-main-container {
  position: relative;
+
+ .drop-container{
+    position: absolute;
+    top: 4.25rem;
+    left: -13.5rem;
+ }
 }
