--- a/src/app/avatar-drop/avatar-drop.component.scss
+++ b/src/app/avatar-drop/avatar-drop.component.scss
@@ -1,31 +1,32 @@
-.avatar-drop{
-    position: absolute;
-    min-width: 16rem;
-    height: auto;
-    min-height: 8rem;
-    background-color: #242222;
-    color: #fff;
-    padding: 1rem;
+.avatar-drop {
+  position: absolute;
+  min-width: 16rem;
+  height: auto;
+  min-height: 8rem;
+  background-color: #242222;
+  color: #fff;
+  padding: 1rem;
+  z-index: 9999;
 
-    .tabs{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        gap: 1rem;
+  .tabs {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 1rem;
 
-        button {
-            background: none;
-            border: none;
-            width: 100%;
-        }
-        
-        .active{
-            padding-bottom: 0.25rem;
-            border-bottom: 2px solid #0f7ce2;
-        }
+    button {
+      background: none;
+      border: none;
+      width: 100%;
     }
 
-    .contents{
-        margin-top: 1rem;
+    .active {
+      padding-bottom: 0.25rem;
+      border-bottom: 2px solid #0f7ce2;
     }
+  }
+
+  .contents {
+    margin-top: 1rem;
+  }
 }
