--- a/src/app/wish/add-wish/add-wish.component.html
+++ b/src/app/wish/add-wish/add-wish.component.html
@@ -1,9 +1,10 @@
 <form class="row navBar" (submit)="$event.preventDefault();addItem($event)">
     <div class="col-xs-10 gap-4 pl-1">
-      <label for="add-wish" class="visually-hidden">Add Wish</label>
-      <input name="new-wish-text" class="p-1 col-xs-12 form-input" type="text" id="add-wish" placeholder="Enter your wish here..." [(ngModel)]="newWishText" autocomplete="off">
+        <label for="add-wish" class="visually-hidden">Add Wish</label>
+        <input name="new-wish-text" class="p-1 col-xs-12 form-input" type="text" id="add-wish"
+               placeholder="Enter your wish here..." [(ngModel)]="newWishText" autocomplete="off">
     </div>
     <div class="col-xs-2 d-flex justify-center align-center">
-      <button type="submit" class="btn btn-dark-secondary btn-hover-dark">Add Wish</button>
+        <button type="submit" class="btn btn-dark-secondary btn-hover-dark">Add Wish</button>
     </div>
-  </form>
+</form>
