--- a/src/app/search/search-bar/search-bar.component.html
+++ b/src/app/search/search-bar/search-bar.component.html
@@ -2,7 +2,7 @@
  <div class="d-flex">
   <input type="text" [(ngModel)]="searchParam" class="container form-input p-1 m-1" name="search" id="search" placeholder="Search..." />
   <div class="d-flex justify-center align-center">
-   <button type="submit" class="btn btn-dark-secondary btn-hover-dark" (click)="onSubmit($event)">Search</button>
+   <button type="submit" class="btn btn-dark-secondary btn-hover-dark" (click)="onSubmit()">Search</button>
   </div>
  </div>
 </div>
