filter component function completed

--- a/src/app/search/search-results/search-results.component.html
+++ b/src/app/search/search-results/search-results.component.html
@@ -1,2 +1,2 @@
 <app-search-bar (searchEvent)="showSearchResults($event)" />
-<app-search-filter [searchFilters]="searchResultFilter" />
+<app-search-filter />
