--- a/src/app/search/search-filter/search-filter.component.html
+++ b/src/app/search/search-filter/search-filter.component.html
@@ -2,10 +2,12 @@
     <ul>
         <li class="d-flex-col" *ngFor="let filter of searchFilters; index as i">
             <div class="row">
-                <input type="checkbox" [checked]="filter.checked" [(ngModel)]="triggerFiltersObj[i].checked"
-                       [name]="filter.categoryName" (ngModelChange)="changeAction({
+                <input type="checkbox" [checked]="filter.checked"
+                       [indeterminate]="filter.partialChecked"
+                       [name]="filter.categoryName" (click)="changeAction({
                        categoryName: filter.categoryName,
-                       checked: $event,
+                       checked: !filter.checked,
+                       id: 'main'
                        })"
                 />
                 <h5>{{ filter.categoryName }}</h5>
@@ -13,15 +15,15 @@
             <ul class="pl-1" *ngIf="filter.subCategories">
                 <li class="d-flex" *ngFor="let subc of filter.subCategories; index as j">
                     <input type="checkbox" [checked]="subc.checked"
-                           [(ngModel)]="triggerFiltersObj[i].subCategories[j].checked"
                            [name]="subc.categoryName"
-                           (ngModelChange)="changeAction({
+                           (click)="changeAction({
                         categoryName: filter.categoryName,
                         checked: false,
                         subCategory: {
                             categoryName: subc.categoryName,
-                            checked: $event
-                        }
+                            checked: !subc.checked
+                        },
+                        id: 'sub'
                     })"/>
                     <h5>{{ subc.categoryName }}</h5>
                 </li>
